--- a/index.html
+++ b/index.html
@@ -1,80 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Time tracking dashboard</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Geologica:wght@300;400;500&family=Outfit:wght@400;700&family=Poppins:wght@200;400;600&family=Rubik:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
 
-  Report for
-  Jeremy Robson
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css" />
 
-  Daily
-  Weekly
-  Monthly
+    <!-- title -->
+    <title>Frontend Mentor | Time tracking dashboard</title>
+  </head>
+  <body>
+    <div class="summary-card">
+      <div class="card-head">
+        <img src="./images/image-jeremy.png" alt="" width="50px" />
+        <h6>Report for</h6>
+        <h2>
+          Jeremy <br />
+          Robson
+        </h2>
+      </div>
 
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
+      <div class="card-content">
+        <p>Daily</p>
+        <p>Weekly</p>
+        <p>Monthly</p>
+      </div>
+    </div>
 
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
+    <div class="work-card">
+      <div class="work-img">
+        <img src="./images/icon-work.svg" width="50px" alt="" />
+      </div>
+      <div class="work-description">
+        <div class="description-title">
+          <h5 class="card-title">Work</h5>
+          <div class="img-ellipsis">
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+        </div>
+        <h2>32hrs</h2>
+        <p>Last Week - 36hrs</p>
+      </div>
+    </div>
 
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
+    <div class="play-card">
+      <div class="play-description">
+        <img src="./images/icon-play.svg" alt="" />
+        <div class="description-title">
+          <h5 class="card-title">Play</h5>
+          <img src="./images/icon-ellipsis.svg" alt="" />
+        </div>
+        <h2>10hrs</h2>
+        <p>Last - 8hrs</p>
+      </div>
+    </div>
 
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
+    <div class="study-card">
+      <img src="./images/icon-study.svg" alt="" />
+      <div class="description-title">
+        <h5 class="card-title">Study</h5>
+        <img src="./images/icon-ellipsis.svg" alt="" />
+      </div>
+      <h2>4hrs</h2>
+      <p>Lask Week - 7hrs</p>
+    </div>
 
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
+    <div class="exercise-card">
+      <img src="./images/icon-exercise.svg" alt="" />
+      <div class="description-title">
+        <h5 class="card-title">Exercise</h5>
+        <img src="./images/icon-ellipsis.svg" alt="" />
+      </div>
+      <h2>4hrs</h2>
+      <p>Last Week - 5hrs</p>
+    </div>
 
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
+    <div class="social-card">
+      <img src="./images/icon-social.svg" alt="" />
+      <div class="description-title">
+        <h5 class="card-title">Social</h5>
+        <img src="./images/icon-ellipsis.svg" alt="" />
+      </div>
+      <h2>5hrs</h2>
+      <p>Last Week - 10hrs</p>
+    </div>
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="self-care-card">
+      <img src="./images/icon-self-care.svg" alt="" />
+      <div class="description-title">
+        <h5 class="card-title">Self-care</h5>
+        <img src="./images/icon-ellipsis.svg" alt="" />
+      </div>
+      <h2>2hrs</h2>
+      <p>Last Week - 2hrs</p>
+    </div>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
