style:added grid the cards

--- a/index.html
+++ b/index.html
@@ -27,96 +27,130 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    <div class="summary-card">
-      <div class="card-head">
-        <img src="./images/image-jeremy.png" alt="" width="50px" />
-        <h6>Report for</h6>
-        <h2>
-          Jeremy <br />
-          Robson
-        </h2>
+  <div class="body">
+    <div class="main">
+      <div class="summary-card">
+        <div class="card-head">
+          <img src="./images/image-jeremy.png" alt="" width="50px" />
+          <h6>Report for</h6>
+          <h2>
+            Jeremy <br />
+            Robson
+          </h2>
+        </div>
+  
+        <div class="card-content">
+          <p>Daily</p>
+          <p>Weekly</p>
+          <p>Monthly</p>
+        </div>
       </div>
-
-      <div class="card-content">
-        <p>Daily</p>
-        <p>Weekly</p>
-        <p>Monthly</p>
-      </div>
-    </div>
-
-    <div class="work-card">
-      <div class="work-img">
-        <img src="./images/icon-work.svg" width="50px" alt="" />
-      </div>
-      <div class="work-description">
-        <div class="description-title">
-          <h5 class="card-title">Work</h5>
-          <div class="img-ellipsis">
-            <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="work-card">
+        <div class="work-img">
+          <img src="./images/icon-work.svg" width="50px" alt="" />
+        </div>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Work</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
           </div>
+          <h2>32hrs</h2>
+          <p>Last Week - 36hrs</p>
         </div>
-        <h2>32hrs</h2>
-        <p>Last Week - 36hrs</p>
       </div>
-    </div>
-
-    <div class="play-card">
-      <div class="play-description">
-        <img src="./images/icon-play.svg" alt="" />
-        <div class="description-title">
-          <h5 class="card-title">Play</h5>
-          <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="play-card">
+        <div class="work-img">
+          <img src="./images/icon-play.svg" width="50px" alt="" />
         </div>
-        <h2>10hrs</h2>
-        <p>Last - 8hrs</p>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Play</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+          </div>
+          <h2>10hrs</h2>
+          <p>Last Week- 8hrs</p>
+        </div>
       </div>
-    </div>
-
-    <div class="study-card">
-      <img src="./images/icon-study.svg" alt="" />
-      <div class="description-title">
-        <h5 class="card-title">Study</h5>
-        <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="study-card">
+        <div class="work-img">
+          <img src="./images/icon-study.svg" width="50px" alt="" />
+        </div>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Study</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+          </div>
+          <h2>4hrs</h2>
+          <p>Lask Week - 7hrs</p>
+        </div>
       </div>
-      <h2>4hrs</h2>
-      <p>Lask Week - 7hrs</p>
-    </div>
-
-    <div class="exercise-card">
-      <img src="./images/icon-exercise.svg" alt="" />
-      <div class="description-title">
-        <h5 class="card-title">Exercise</h5>
-        <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="exercise-card">
+        <div class="work-img">
+          <img src="./images/icon-exercise.svg" width="50px" alt="" />
+        </div>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Exercise</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+          </div>
+          <h2>4hrs</h2>
+        <p>Last Week - 5hrs</p>
+        </div>
       </div>
-      <h2>4hrs</h2>
-      <p>Last Week - 5hrs</p>
-    </div>
-
-    <div class="social-card">
-      <img src="./images/icon-social.svg" alt="" />
-      <div class="description-title">
-        <h5 class="card-title">Social</h5>
-        <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="social-card">
+        <div class="work-img">
+          <img src="./images/icon-social.svg" width="50px" alt="" />
+        </div>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Social</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+          </div>
+          <h2>5hrs</h2>
+        <p>Last Week - 10hrs</p>
+        </div>
       </div>
-      <h2>5hrs</h2>
-      <p>Last Week - 10hrs</p>
-    </div>
-
-    <div class="self-care-card">
-      <img src="./images/icon-self-care.svg" alt="" />
-      <div class="description-title">
-        <h5 class="card-title">Self-care</h5>
-        <img src="./images/icon-ellipsis.svg" alt="" />
+  
+      <div class="self-care-card">
+        <div class="work-img">
+          <img src="./images/icon-self-care.svg" width="50px" alt="" />
+        </div>
+        <div class="work-description">
+          <div class="description-title">
+            <h4 class="card-title">Self-care</h4>
+            <div class="img-ellipsis">
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+          </div>
+          <h2>2hrs</h2>
+          <p>Last Week - 2hrs</p>
+        </div>
       </div>
-      <h2>2hrs</h2>
-      <p>Last Week - 2hrs</p>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+  
+     </div>
+    
+  
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+  </div>
   </body>
 </html>
