style:added border-radius to the cards

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
   
         <div class="card-content">
-          <p>Daily</p>
+          <p class="card-content-para">Daily</p>
           <p>Weekly</p>
-          <p>Monthly</p>
+          <p class="card-content-para">Monthly</p>
         </div>
       </div>
   
@@ -90,7 +90,7 @@
             </div>
           </div>
           <h2>4hrs</h2>
-          <p>Lask Week - 7hrs</p>
+          <p>Last Week - 7hrs</p>
         </div>
       </div>
   
